mod : 브랜드 지원자 성과 조회 로직 중 페이징 경계값 처리 보완